Fix overflow for wide output content

--- a/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/NotebookCodeCell.css
+++ b/src/vs/workbench/contrib/positronNotebook/browser/notebookCells/NotebookCodeCell.css
@@ -9,16 +9,26 @@
 	}
 
 	.positron-notebook-cell-outputs {
-		padding-inline: 1rem;
-		padding-block: 0.5rem;
-		& .notebook-error,
-		& .notebook-stderr {
-			color: var(--vscode-positronNotebook-error-color);
-		}
+		overflow: hidden;
 
 		&:empty {
 			/* Dont show empty outputs at all */
 			display: none;
+		}
+	}
+
+	.positron-notebook-code-cell-outputs-inner {
+		padding-inline: 1rem;
+		padding-block: 0.5rem;
+
+		/* Avoid overlap with border which is overlaid from another element so
+		the layout doesn't automatically avoid it*/
+		margin-inline: 1px;
+		overflow-x: auto;
+
+		& .notebook-error,
+		& .notebook-stderr {
+			color: var(--vscode-positronNotebook-error-color);
 		}
 
 		/*
